@@ -3,3 +3,4 @@
 void DoTasEdit();
 void UpdateTasEdit();
 void CreateProject(MovieData data);
+void InvalidateGreenZone(int after);
